# ebt

./: .gitignore  Makefile  README.md  TODO.md  emit.cc  emit.h  ir.cc  ir.h  main.cc  parse.cc  parse.h  util.cc  util.h
doc/: refs.md
dr-demo/: CMakeLists.txt  README.md  empty.c  empty.ebt  empty.gen.c  fcalls.c  fcalls.ebt  hello.c  hello.ebt  insn_div.c  insn_div.ebt  insn_div_array.c  insn_div_array.ebt  insn_div_fn.c  insn_div_fn.ebt  memdummy.c  memdummy.ebt  memwatch.ebt
dr-demo/test/: divtest1.c  divtest2.c  divtest3.c  widget1.c
examples/: insn-profiler.ebt
runtime/: opcode.h
test/: emit_basic.sh  lex.sh  parse.sh  parse_basic.sh  test_all.sh
test/emit.good/: basic1.sj
test/lex.bad/: 1.ebt  2.ebt  3.sj  4.ebt  5.sj
test/lex.good/: 1.ebt  2.ebt
test/parse.bad/: 1.ebt  1.sj  2.ebt  3.ebt  4.ebt
test/parse.good/: 1.sj  2.ebt  basic1.ebt
